Cloud Native/Containers/Orchestration/K8s/Projects/scraper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mars-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mars.com
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: scraper-svc
              port:
                number: 8080
        - path: /scrape
          pathType: ImplementationSpecific
          backend:
            service:
              name: scraper-svc
              port:
                number: 8080
